syntax = "proto3";
package comdex.locker.v1beta1;

import "gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

option go_package            = "github.com/comdex-official/comdex/x/locker/types";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;
//locker_id will be the key which will be derived from the LockerLookUpTable
message Locker {
  string locker_id = 1 [
      (gogoproto.moretags) = "yaml:\"locker_id\""
  ];
  string depositor = 2 [
      (gogoproto.moretags) = "yaml:\"depositor\""
  ];
  // string deposited_amount = 3 [
  //   (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
  //   (gogoproto.moretags)   = "yaml:\"deposited_amount\"",
  //   (gogoproto.nullable)   = false
  // ]; 

  string returns_accumulated = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags)   = "yaml:\"returns_accumulated\"",
    (gogoproto.nullable)   = false
  ];
  string net_balance = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags)   = "yaml:\"net_balance\"",
    (gogoproto.nullable)   = false
  ];
  google.protobuf.Timestamp created_at = 5 [
      (gogoproto.nullable) = false,
      (gogoproto.stdtime) = true,
      (gogoproto.moretags)   = "yaml:\"created_at\""
  ];

  uint64 asset_deposit_id =6[
      (gogoproto.moretags)   = "yaml:\"asset_deposit_id\""
  ];
  bool is_locked = 7 [
    (gogoproto.moretags)   = "yaml:\"is_locked\""
  ]; 
  uint64 app_id =8[
    (gogoproto.moretags)   = "yaml:\"app_id\""
];
}

//Key is user address
message UserLockerAssetMapping {
  string owner = 1 [
      (gogoproto.moretags) = "yaml:\"owner\""
  ];
  repeated LockerToAppMapping  locker_app_mapping = 2 [
  (gogoproto.moretags) = "yaml:\"locker_app_mapping\""];
}

//This is used inside the UserLockerAssetMapping
message LockerToAppMapping {
 uint64 app_id = 1;

 repeated AssetToLockerMapping user_asset_locker= 2[
  (gogoproto.moretags) = "yaml:\"user_asset_locker\""];
}

//This is used inside LockerToAppMapping
message AssetToLockerMapping{
  uint64 asset_id = 1;
  string locker_id =2 [
    (gogoproto.moretags) = "yaml:\"locker_id\""];
  repeated UserTxData user_data =3  [
    (gogoproto.moretags) = "yaml:\"user_data\""];
  }

message UserTxData{
  string tx_type =1 [(gogoproto.moretags) = "yaml:\"tx_type\""];
  string amount = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags)   = "yaml:\"amount\"",
    (gogoproto.nullable)   = false
  ];
  string balance = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags)   = "yaml:\"balance\"",
    (gogoproto.nullable)   = false
  ];
  google.protobuf.Timestamp tx_time = 4 [
    (gogoproto.nullable) = false,
    (gogoproto.stdtime) = true,
    (gogoproto.moretags) = "yaml:\"tx_time\""
  ];

}

//Key is app_mapping_id
message LockerLookupTable {
  uint64 app_id = 1[    (gogoproto.moretags) = "yaml:\"app_id\""
  ];
  repeated TokenToLockerMapping lockers = 2 [
      (gogoproto.moretags) = "yaml:\"lockers\""
  ];
  uint64 counter = 3;
}
message TokenToLockerMapping {
 uint64 asset_id = 1;

 repeated string locker_ids =2 [
 (gogoproto.moretags) = "yaml:\"addresses\""
  ];
  string deposited_amount = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags)   = "yaml:\"deposited_amount\"",
    (gogoproto.nullable)   = false
  ]; 
}

//Key is app_mapping_id
message LockerProductAssetMapping {
  uint64 app_id = 1 [
      (gogoproto.moretags) = "yaml:\"app_id\""
  ];
  
  repeated uint64 asset_ids  = 2 [
      (gogoproto.moretags) = "yaml:\"asset_ids\""
  ];
}

message LockedDepositedAmountDataMap
{
  uint64 asset_id = 1 [ (gogoproto.moretags) = "yaml:\"asset_id\"" ];
  string deposited_amount= 2 [ (gogoproto.moretags) = "yaml:\"deposited_amount\"",
         (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
         (gogoproto.nullable)   = false];
}

message LockerTotalRewardsByAssetAppWise {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
  uint64 asset_id = 2 [ (gogoproto.moretags) = "yaml:\"asset_id\"" ];
  string total_rewards= 3 [ (gogoproto.moretags) = "yaml:\"total_rewards\"",
         (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
         (gogoproto.nullable)   = false];
}

// message LockerStatistics {
  
//   map<string, uint64> locked_assets = 2 [
//     (gogoproto.moretags) = "yaml:\"locked_assets\""
//   ];
// }