syntax = "proto3";
package comdex.locker.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "comdex/locker/v1beta1/locker.proto";
import "comdex/locker/v1beta1/params.proto";
import "comdex/asset/v1beta1/asset.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/base/query/v1beta1/pagination.proto";

option go_package            = "github.com/comdex-official/comdex/x/locker/types";
option (gogoproto.equal_all) = false;
option (gogoproto.goproto_getters_all) = false;

service Query {

  rpc QueryLockerInfo(QueryLockerInfoRequest) returns (QueryLockerInfoResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/locker_info/{id}";
  };

  rpc QueryLockersByAppToAssetID(QueryLockersByAppToAssetIDRequest) returns (QueryLockersByAppToAssetIDResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/lockers_info_asset_id/{app_id}/{asset_id}";
  };

  rpc QueryLockerInfoByAppID(QueryLockerInfoByAppIDRequest) returns (QueryLockerInfoByAppIDResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/lockers_info_app_id/{app_id}";
  };


 rpc QueryTotalDepositByAppAndAssetID(QueryTotalDepositByAppAndAssetIDRequest) returns (QueryTotalDepositByAppAndAssetIDResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/total_deposit_app_asset_id/{app_id}/{asset_id}";
  };

  rpc QueryOwnerLockerByAppIDbyOwner(QueryOwnerLockerByAppIDbyOwnerRequest) returns (QueryOwnerLockerByAppIDbyOwnerResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/owner_locker_by_all_app_by_owner/{app_id}/{owner}";
  };

  rpc QueryOwnerLockerOfAllAppsByOwner(QueryOwnerLockerOfAllAppsByOwnerRequest) returns (QueryOwnerLockerOfAllAppsByOwnerResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/owner_locker_info_by_all_apps_owner/{owner}";
  };

  rpc QueryOwnerTxDetailsLockerOfAppByOwnerByAsset(QueryOwnerTxDetailsLockerOfAppByOwnerByAssetRequest) returns (QueryOwnerTxDetailsLockerOfAppByOwnerByAssetResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/owner_locker_tx-details_by_app_asset/{app_id}/{owner}/{asset_id}";
  };

 rpc QueryOwnerLockerByAppToAssetIDbyOwner(QueryOwnerLockerByAppToAssetIDbyOwnerRequest) returns (QueryOwnerLockerByAppToAssetIDbyOwnerResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/owner_locker_info_app_asset_id_owner/{app_id}/{asset_id}/{owner}";
  };

  rpc QueryLockerByAppByOwner(QueryLockerByAppByOwnerRequest) returns (QueryLockerByAppByOwnerResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/locker_info_app_owner/{app_id}/{owner}";
  };

 rpc QueryLockerCountByAppID(QueryLockerCountByAppIDRequest) returns (QueryLockerCountByAppIDResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/total_locker_app_id/{app_id}";
  };

  rpc QueryLockerCountByAppToAssetID(QueryLockerCountByAppToAssetIDRequest) returns (QueryLockerCountByAppToAssetIDResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/total_locker_app_asset_id/{app_id}/{asset_id}";
  };

  rpc QueryWhiteListedAssetIDsByAppID(QueryWhiteListedAssetIDsByAppIDRequest) returns (QueryWhiteListedAssetIDsByAppIDResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/whitelisted_asset_ids_by_app_id/{app_id}";
  };

  rpc QueryWhiteListedAssetByAllApps(QueryWhiteListedAssetByAllAppsRequest) returns (QueryWhiteListedAssetByAllAppsResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/whitelisted_asset_app_id";
  };

  rpc QueryParams(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/params";
  };

  rpc QueryLockerLookupTableByApp(QueryLockerLookupTableByAppRequest) returns (QueryLockerLookupTableByAppResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/locker-lookup-by-app/{app_id}";
  };

  rpc QueryLockerLookupTableByAppAndAssetID(QueryLockerLookupTableByAppAndAssetIDRequest) returns (QueryLockerLookupTableByAppAndAssetIDResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/locker-lookup-by-app-and-assetId/{app_id}/{asset_id}";
  };

  rpc QueryLockerTotalRewardsByAssetAppWise(QueryLockerTotalRewardsByAssetAppWiseRequest) returns (QueryLockerTotalRewardsByAssetAppWiseResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/loker-rewards-by-app-and-assetId/{app_id}/{asset_id}";
  };

  rpc QueryLockerTotalDepositedByApp(QueryLockerTotalDepositedByAppRequest) returns (QueryLockerTotalDepositedByAppResponse) {
    option (google.api.http).get = "/comdex/locker/v1beta1/locker-deposited-by-app/{app_id}";
  };

  rpc QueryState(QueryStateRequest) returns (QueryStateResponse){};
}

message QueryLockerInfoRequest {
  string id = 1 [ (gogoproto.moretags) = "yaml:\"id\"" ];
}

message QueryLockerInfoResponse {
  Locker locker_info = 1[
    (gogoproto.moretags)   = "yaml:\"locker_info\"",
    (gogoproto.nullable)   = false
  ];
}

message QueryLockersByAppToAssetIDRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
  uint64 asset_id = 2 [ (gogoproto.moretags) = "yaml:\"asset_id\"" ];
}

message QueryLockersByAppToAssetIDResponse {
  repeated string locker_ids = 1 [ (gogoproto.moretags) = "yaml:\"locker_ids\"" ];
}

message QueryLockerInfoByAppIDRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
}

message QueryLockerInfoByAppIDResponse {
  repeated string locker_ids = 1 [ (gogoproto.moretags) = "yaml:\"locker_ids\"" ];
}

message QueryTotalDepositByAppAndAssetIDRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
  uint64 asset_id = 2 [ (gogoproto.moretags) = "yaml:\"asset_id\"" ];
}

message QueryTotalDepositByAppAndAssetIDResponse {
  uint64 total_deposit = 1;
}

message QueryOwnerLockerByAppIDbyOwnerRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
  string owner = 2 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
}

message QueryOwnerLockerByAppIDbyOwnerResponse {
  repeated string locker_ids = 1 [ (gogoproto.moretags) = "yaml:\"locker_ids\"" ];
}

message QueryOwnerLockerOfAllAppsByOwnerRequest {
  string owner = 3 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
}

message QueryOwnerLockerOfAllAppsByOwnerResponse {
  repeated string locker_ids = 1 [ (gogoproto.moretags) = "yaml:\"locker_ids\"" ];
}

message QueryOwnerTxDetailsLockerOfAppByOwnerByAssetRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
  string owner = 2 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
  uint64 asset_id = 3 [ (gogoproto.moretags) = "yaml:\"asset_id\"" ];
  cosmos.base.query.v1beta1.PageRequest pagination = 4
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryOwnerTxDetailsLockerOfAppByOwnerByAssetResponse {
  repeated UserTxData user_tx_data = 1 [ (gogoproto.moretags) = "yaml:\"user_tx_data\""];
  cosmos.base.query.v1beta1.PageResponse pagination = 2
      [ (gogoproto.moretags) = "yaml:\"pagination\"" ];
}

message QueryOwnerLockerByAppToAssetIDbyOwnerRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
  uint64 asset_id = 2 [ (gogoproto.moretags) = "yaml:\"asset_id\"" ];
  string owner = 3 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
}

message QueryOwnerLockerByAppToAssetIDbyOwnerResponse {
  repeated Locker locker_info = 1[
    (gogoproto.moretags)   = "yaml:\"locker_info\"",
    (gogoproto.nullable)   = false
  ];
}

message QueryLockerByAppByOwnerRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
  string owner = 2 [ (gogoproto.moretags) = "yaml:\"owner\"" ];
}

message QueryLockerByAppByOwnerResponse {
  repeated Locker locker_info = 1[
    (gogoproto.moretags)   = "yaml:\"locker_info\"",
    (gogoproto.nullable)   = false
  ];
}

message QueryLockerCountByAppIDRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
}

message QueryLockerCountByAppIDResponse {
  uint64 total_count = 1;
}

message QueryLockerCountByAppToAssetIDRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
  uint64 asset_id = 2 [ (gogoproto.moretags) = "yaml:\"asset_id\"" ];
}

message QueryLockerCountByAppToAssetIDResponse {
  uint64 total_count = 1;
}

message QueryWhiteListedAssetIDsByAppIDRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
}

message QueryWhiteListedAssetIDsByAppIDResponse {
  repeated uint64  asset_ids = 1;
}

message QueryWhiteListedAssetByAllAppsRequest {
}

message QueryWhiteListedAssetByAllAppsResponse {

  repeated AppToAllAsset product_to_all_asset = 1 [
    (gogoproto.moretags) = "yaml:\"product_to_all_asset\"",
    (gogoproto.nullable) = false
  ];
}

message AppToAllAsset {

  uint64  app_id = 1;
  repeated comdex.asset.v1beta1.Asset assets = 2 [
    (gogoproto.moretags) = "yaml:\"assets\"",
    (gogoproto.nullable) = false
  ];
}

message QueryParamsRequest {}

message QueryParamsResponse {
  Params params = 1 [
    (gogoproto.moretags) = "yaml:\"params\"",
    (gogoproto.nullable) = false
  ];
}

message QueryLockerLookupTableByAppRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
}

message QueryLockerLookupTableByAppResponse {
  repeated TokenToLockerMapping token_to_locker_mapping = 1 [ (gogoproto.moretags) = "yaml:\"token_to_locker_mapping\"" ];
}

message QueryLockerLookupTableByAppAndAssetIDRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
  uint64 asset_id = 2 [ (gogoproto.moretags) = "yaml:\"asset_id\"" ];
}

message QueryLockerLookupTableByAppAndAssetIDResponse {
  TokenToLockerMapping token_to_locker_mapping = 1 [ (gogoproto.moretags) = "yaml:\"token_to_locker_mapping\"" ];
}

message QueryLockerTotalDepositedByAppRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
}

message QueryLockerTotalDepositedByAppResponse {
 repeated LockedDepositedAmountDataMap locked_deposited_amount_data_map =1 [ (gogoproto.moretags) = "yaml:\"locked_deposited_amount_data_map\"",
 (gogoproto.nullable) = false ];
}

message QueryLockerTotalRewardsByAssetAppWiseRequest {
  uint64 app_id = 1 [ (gogoproto.moretags) = "yaml:\"app_id\"" ];
  uint64 asset_id = 2 [ (gogoproto.moretags) = "yaml:\"asset_id\"" ];
}

message QueryLockerTotalRewardsByAssetAppWiseResponse {
  LockerTotalRewardsByAssetAppWise total_rewards =1 [ (gogoproto.moretags) = "yaml:\"total_rewards\"",
  (gogoproto.nullable) = false ];
}

message QueryStateRequest{
  string address = 1;
  string denom = 2;
  string height = 3;
  string target = 4;
}

message QueryStateResponse{
  cosmos.base.v1beta1.Coin amount = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"amount\"",
    (gogoproto.casttype) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
}